--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,10 @@ services:
     depends_on:
       - postgres
     ports:
-      - 3000:3000
+      - 80:80
     environment:
       LOG_LEVEL: debug
       LOG_TEXTLOGGING: "true"
-      PORT: 8000
       DB_ADDR: postgres:5432
       ENABLE_CORS: "true"
       
@@ -28,5 +27,6 @@ services:
       - postgres:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: "godb"
+      POSTGRES_PORT: 5432
       POSTGRES_USER: "am"
       POSTGRES_PASSWORD: postgres
